--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/core": "~9.0.6",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.6",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "crypto-js": "^4.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
