--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "hammerjs": "^2.0.8",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
-        "typescript": "^3.6.4",
+        "typescript": "~3.5.3",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
