--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular/platform-browser": "~9.0.6",
         "@angular/platform-browser-dynamic": "~9.0.6",
         "@angular/router": "~9.0.6",
+        "cors": "^2.8.5",
         "crypto-js": "^4.0.0",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
