--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "node server.js",
+        "start": "ng serve",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e",
-        "postinstall": "ng build --prod"
+        "e2e": "ng e2e"
     },
     "private": true,
     "dependencies": {
@@ -36,6 +35,8 @@
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
+        "@angular/cli": "~9.1.0-next.3",
+        "@angular/compiler-cli": "~9.0.6",
         "@angular-devkit/build-angular": "~0.901.0-next.3",
         "@angular/language-service": "~9.0.6",
         "@types/jasmine": "~3.3.8",
