--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "aplicacao-cif-mackenzie",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "postinstall": "ng build --prod"
     },
     "private": true,
     "dependencies": {
