--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@angular/platform-browser": "~9.0.6",
         "@angular/platform-browser-dynamic": "~9.0.6",
         "@angular/router": "~9.0.6",
+        "bootstrap": "^4.4.1",
         "cors": "^2.8.5",
         "crypto-js": "^4.0.0",
         "express": "^4.17.1",
@@ -35,10 +36,11 @@
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
+        "@angular-devkit/build-angular": "~0.901.0-next.3",
         "@angular/cli": "~9.1.0-next.3",
         "@angular/compiler-cli": "~9.0.6",
-        "@angular-devkit/build-angular": "~0.901.0-next.3",
         "@angular/language-service": "~9.0.6",
+        "@types/crypto-js": "^3.1.44",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^12.11.1",
