--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "crypto-js": "^4.0.0",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
+        "ngx-mask": "^9.0.2",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
         "typescript": "^3.6.4",
