--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
         "crypto-js": "^4.0.0",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
+        "html2canvas": "^1.0.0-rc.5",
+        "jspdf": "^1.5.3",
         "ngx-mask": "^9.0.2",
+        "pdfmake": "^0.1.65",
+        "pdfmake-wrapper": "^2.0.0",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
         "typescript": "^3.6.4",
@@ -44,6 +48,7 @@
         "@types/crypto-js": "^3.1.44",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
+        "@types/jspdf": "^1.3.3",
         "@types/node": "^12.11.1",
         "codelyzer": "^5.1.2",
         "jasmine-core": "~3.4.0",
