--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
         "crypto-js": "^4.0.0",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
-        "ngx-mask": "^9.0.2",
         "html2canvas": "^1.0.0-rc.5",
         "jspdf": "^1.5.3",
+        "jspdf-autotable": "^3.5.6",
+        "ngx-mask": "^9.0.2",
         "pdfmake": "^0.1.65",
         "pdfmake-wrapper": "^2.0.0",
         "rxjs": "~6.5.4",
+        "string-width": "^4.2.0",
         "tslib": "^1.10.0",
         "typescript": "^3.6.4",
         "zone.js": "~0.10.2"
